--- a/source/review.html
+++ b/source/review.html
@@ -71,10 +71,10 @@
                 <input type="radio" id="good" name="feel" value="good" checked><label class="label-ch" for="good">Скорее положительное</label>
               </li>
               <li class="feeling__item">
-                <input type="radio" id="bad" name="feel" value="bad"><label class="label-ch" for="bad">Скорее отрицательное</label class="label-ch">
+                <input type="radio" id="bad" name="feel" value="bad"><label class="label-ch" for="bad">Скорее отрицательное</label>
               </li>
               <li class="feeling__item">
-                <input type="radio" id="none" name="feel" value="none"><label class="label-ch" for="good">Затрудняюсь ответить</label class="label-ch">  
+                <input type="radio" id="none" name="feel" value="none"><label class="label-ch" for="none">Затрудняюсь ответить</label>  
               </li>
             </ul>
           </div>
@@ -157,7 +157,7 @@
             <textarea class="emotions__textarea" name="emotions" id="emotions" placeholder="Опишите подробно все свои восторги "></textarea>
           </div>
 
-          <div class="form__item form__itemm--button">
+          <div class="form__item form__item--button">
             <button class="form__button button" type="submit">Отправить отзыв</button>
             <p class="form__button--text">* &ndash; Обязательные поля</p>
 
