--- a/source/index.html
+++ b/source/index.html
@@ -3,11 +3,12 @@
   <head>
     <link rel="stylesheet" href="css/style.min.css" type="text/css">
     <meta charset="UTF-8">
+    <title>Седона</title>
   </head>
   <body>
     <header class="page-header">
       <nav class="main-nav">
-        <ul class="main-nav__list">
+        <ul class="main-nav__list menu-off">
           <li class="main-nav__item">
             <a class="main-nav__link current" href="index.html">Главная</a>
           </li>
@@ -32,7 +33,7 @@
         </p>
 
         <button  class="main-nav__open main-nav__button">Открыть</button>
-        <button class="main-nav__close main-nav__button">Закрыть</button>
+        <button class="main-nav__close close__off main-nav__button">Закрыть</button>
       </nav>
     </header>
 
@@ -249,5 +250,8 @@
       </div>
 
     </footer>
+
+    <script src="js/menu-mob.js"></script>
+
   </body>
 </html>
