--- a/source/review.html
+++ b/source/review.html
@@ -3,22 +3,25 @@
   <head>
     <link rel="stylesheet" href="css/style.min.css" type="text/css">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
+    <title>Седона</title>
   </head>
   <body>
     <header class="page-header">
       <nav class="main-nav">
-        <ul class="main-nav__list">
+        <ul class="main-nav__list menu-off">
           <li class="main-nav__item">
-            <a class="main-nav__link" href="index.html">Главная</a>
+            <a class="main-nav__link" method="GET" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="photo.html">Фото и видео</a>
+            <a class="main-nav__link" method="GET" href="photo.html">Фото и видео</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link current" href="review.html">Форма отзыва</a>
+            <a class="main-nav__link current" method="GET" href="review.html">Форма отзыва</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="htmlacademy.html">HTML Academy</a>
+            <a class="main-nav__link" method="GET" href="htmlacademy.html">HTML Academy</a>
           </li>
         </ul>
         
@@ -32,7 +35,7 @@
         </p>
 
         <button  class="main-nav__open main-nav__button">Открыть</button>
-        <button class="main-nav__close main-nav__button">Закрыть</button>
+        <button class="main-nav__close close__off main-nav__button">Закрыть</button>
       </nav>
     </header>
 
@@ -106,10 +109,10 @@
                   <style type="text/css">
                     .st0{fill:#010101;}
                   </style>
-                  <g id="Page-1">
-                    <g id="Icons-Communication" transform="translate(-85.000000, -126.000000)">
-                      <g id="phone" transform="translate(85.000000, 126.000000)">
-                        <path id="Shape" class="st0" d="M3.6,7.8c1.4,2.8,3.8,5.1,6.6,6.6l2.2-2.2c0.3-0.3,0.7-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6
+                  <g>
+                    <g transform="translate(-85.000000, -126.000000)">
+                      <g transform="translate(85.000000, 126.000000)">
+                        <path class="st0" d="M3.6,7.8c1.4,2.8,3.8,5.1,6.6,6.6l2.2-2.2c0.3-0.3,0.7-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6
                           c0.6,0,1,0.4,1,1V17c0,0.6-0.4,1-1,1C7.6,18,0,10.4,0,1c0-0.6,0.4-1,1-1h3.5c0.6,0,1,0.4,1,1c0,1.2,0.2,2.4,0.6,3.6
                           c0.1,0.3,0,0.7-0.2,1L3.6,7.8L3.6,7.8z"/>
                       </g>
@@ -123,7 +126,7 @@
                 <label class="label-text" for="email">Электронная почта*: </label>
                 <input id="email" type="text" placeholder="Введите e-mail">
                 <p class="contacts__logo email-logo">
-                  <svg style="width: 16px;" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg style="width: 16px;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   viewBox="0 2 16 12" style="enable-background:new 0 2 16 12;" xml:space="preserve">
                   <path d="M8,10c-0.27,0-0.5-0.09-1-0.34L0,6v7c0,0.55,0.45,1,1,1h14c0.55,0,1-0.45,1-1V6L9,9.66C8.5,9.91,8.27,10,8,10z M15,2H1
                     C0.45,2,0,2.45,0,3v0.76l8,4.21l8-4.21V3C16,2.45,15.55,2,15,2z"/>
@@ -154,7 +157,7 @@
           
           <div class="form__item emotions">
             <h3 class="form__item--title emotions__title">Опишите свои эмоции</h3>
-            <textarea class="emotions__textarea" name="emotions" id="emotions" placeholder="Опишите подробно все свои восторги "></textarea>
+            <textarea id="emotions__textarea" class="emotions__textarea" name="emotions" id="emotions" placeholder="Опишите подробно все свои восторги "></textarea>
           </div>
 
           <div class="form__item form__item--button">
@@ -170,14 +173,14 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a href="https://www.google.by/search?client=opera&q=%23visitsedona&sourceid=opera&ie=UTF-8&oe=UTF-8" target="_blank" class="visit__link">#visitSEDONA</a>
+        <a href="https://www.google.by/search?client=opera&q=%23visitsedona&sourceid=opera&ie=UTF-8&oe=UTF-8" target="_blank" method="GET" class="visit__link" title="#visitsedona">#visitSEDONA</a>
 
         <ul class="social__list">
           <li class="social__item">
-            <a href="https://twitter.com" target="_blank" class="social__link twitter">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <a href="https://twitter.com" method="GET" target="_blank" class="social__link twitter" title="twitter">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               viewBox="0 0 17.5 14.66" style="enable-background:new 0 0 17.5 14.66;" xml:space="preserve">
-              <g id="W6EeEF_1_">
+              <g>
               <g>
                <path d="M11.28,0.15c1.74-0.48,3.07,0.26,3.68,1.15c0.69-0.23,1.37-0.47,2.07-0.69c0,0.84-0.54,1.48-0.88,1.73
                  c0.7,0.16,1.34-0.48,1.34-0.48c-0.17,0.98-1.04,1.75-1.61,1.98c-0.24,6.59-3.27,10.96-10.38,10.82c-0.54,0,0.08,0-0.46,0
@@ -190,8 +193,8 @@
             </a>
           </li>
           <li class="social__item">
-            <a href="https://facebook.com" target="_blank" class="social__link facebook">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <a href="https://facebook.com" method="GET" target="_blank" class="social__link facebook" title="facebook">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               viewBox="0 0 8.67 18.94" style="enable-background:new 0 0 8.67 18.94;" xml:space="preserve">
               <path d="M6.28,3.36c0.8,0,1.6,0,2.4,0c0-1.12,0-2.24,0-3.36C7.71,0,6.75,0,5.79,0C2.66,0.18,1.54,2.39,1.95,6.11H0v3.52h1.96
                 c0,3.1,0,6.21,0,9.31c1.28,0,2.56,0,3.84,0c0-3.1,0-6.21,0-9.31h2.86V6.11H5.79C5.77,5.07,5.75,3.71,6.28,3.36z"/>
@@ -199,8 +202,8 @@
             </a>
           </li>
           <li class="social__item">
-            <a href="https://youtube.com"  target="_blank" class="social__link youtube">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <a href="https://youtube.com" method="GET" target="_blank" class="social__link youtube" title="youtube">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               viewBox="0 0 19.98 14.02" style="enable-background:new 0 0 19.98 14.02;" xml:space="preserve">
             <path d="M17.14,0H2.84C1.27,0,0,1.28,0,2.83v8.35c0,1.56,1.27,2.83,2.84,2.83h14.31c1.56,0,2.83-1.28,2.83-2.83V2.83
               C19.98,1.28,18.7,0,17.14,0z M7.04,10.39V3.62l6.77,3.38L7.04,10.39z"/>
@@ -210,9 +213,9 @@
         </ul>
 
         <div class="html-academy">
-          <a href="" class="html-academy__link" target="_blank">
+          <a href="" class="html-academy__link" method="GET" target="_blank" title="htmlacademy">
             <span class="html-academy__text">разработано</span>
-            <svg style="width: 27px;" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg style="width: 27px;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             viewBox="0 0 153.38 194.24" style="enable-background:new 0 0 153.38 194.24;" xml:space="preserve">
             <path class="st0" d="M77.5,0.08L76.69,0L0,8.04v140.57l76.69,45.63l76.69-45.63V8.04L77.5,0.08z M143.35,142.9l-66.66,39.66
               L10.03,142.9V85.29l66.37,39.51l0.11,7.16l-45.53-27.1l-0.07,6.95l45.71,27.47l0.11,7.35l-45.7-27.19l-0.07,6.95l45.71,27.47
@@ -226,5 +229,8 @@
       </div>
 
     </footer>
+
+    <script src="js/menu-mob.js"></script>
+
   </body>
 </html>
