--- a/source/index.html
+++ b/source/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <link rel="stylesheet" href="css/style.min.css" type="text/css">
-    <meta charset="UTF-8">
     <title>Седона</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width-device-width, initial-scale-1">
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="format-detection" content="address=no"/>
+    
+    <link rel="preload" href="fonts/PTSans-Regular.woff2" as="font">
+    <link rel="preload" href="fonts/PTSans-Italic.woff2" as="font">
+    <link rel="preload" href="fonts/PTSans-Bold.woff2" as="font">
+    <link rel="preload" href="fonts/PTSans-BoldItalic.woff2" as="font">
+    <link rel="stylesheet" href="css/style.min.css" type="text/css">    
   </head>
   <body>
     <header class="page-header">
@@ -19,7 +28,7 @@
             <a class="main-nav__link" href="review.html">Форма отзыва</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="htmlacademy.html">HTML Academy</a>
+            <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
         
@@ -42,8 +51,8 @@
         <div class="represent__wrapper">
           <p class="represent__image">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/bg-desktop.jpg">
-              <img src="img/bg-mobile.jpg" alt="Горный пейзаж">
+              <source media="(min-width: 1200px)" srcset="img/bg-desktop.webp">
+              <img src="img/bg-mobile.webp" alt="Горный пейзаж">
             </picture>
           </p>
           <p class="represent__text">
@@ -72,14 +81,14 @@
                 <p class="benefits__item--text">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
               </div>
               <p class="benefits__item--image">
-                <img src="img/pic-1.jpg" alt="Седона 1" width="800" height="400">
+                <img src="img/pic-1.webp" alt="Седона 1" width="800" height="400">
               </p>
             </li>
             <li class="benefits__item ben-1-2">
               <div class="benefits__item--about ben-1-2--about">
                 <h3 class="ben-1-2--title">Жилье</h3>
                 <p class="ben-1-2--logo house-logo">
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 74.7 72.35" style="enable-background:new 0 0 74.7 72.35;" xml:space="preserve">
                   <g>
                     <path d="M29.5,65.34h16V41.41h-16V65.34L29.5,65.34z M42.57,62.41H32.44V44.34h10.13V62.41z"/>
@@ -104,7 +113,7 @@
               <div class="benefits__item--about ben-1-2--about">
                 <h3 class="ben-1-2--title">Еда</h3>
                 <p class="ben-1-2--logo buter-logo">
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   viewBox="0 0 76.17 68.96" style="enable-background:new 0 0 76.17 68.96;" xml:space="preserve">
                <g>
                  <path d="M71.91,46.04H4.25C1.91,46.04,0,47.96,0,50.29v3.45C0,56.09,1.91,58,4.25,58h0.96v1.04c0,5.46,4.46,9.92,9.92,9.92h45.91
@@ -127,7 +136,7 @@
               <div class="benefits__item--about ben-1-2--about">
                 <h3 class="ben-1-2--title">Сувениры</h3>
                 <p class="ben-1-2--logo present-logo">
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   viewBox="0 0 63 75.08" style="enable-background:new 0 0 63 75.08;" xml:space="preserve">
                <path d="M60.17,22.23h-0.1h-24.3c13.6-6.81,14.69-11.11,14.19-13.52c-1.14-3.92-5.6-6.94-9.85-5.34
                  c-5.48,2.06-7.03,10.26-8.51,16.19c-1.89-6-3.73-13.65-8.01-17.52c-1.24-1.13-3.05-2.24-5.68-2c-3.96,0.35-9.65,5.32-7.34,10.85
@@ -149,7 +158,7 @@
                 <p class="benefits__item--text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               </div>
               <p class="benefits__item--image">
-                <img src="img/pic-2.jpg" alt="Седона 2" width="800" height="400">
+                <img src="img/pic-2.webp" alt="Седона 2" width="800" height="400">
               </p>
             </li>
             <li class="benefits__item ben-3-5">
@@ -187,19 +196,19 @@
 
       <section class="map">
         <div class="map__wrapper">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2331519.238851223!2d-111.5414488933938!3d35.03616779461298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1578085099909!5m2!1sru!2sby" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          <iframe title="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2331519.238851223!2d-111.5414488933938!3d35.03616779461298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1578085099909!5m2!1sru!2sby" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
       </section>
     </main>
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a href="https://www.google.by/search?client=opera&q=%23visitsedona&sourceid=opera&ie=UTF-8&oe=UTF-8" target="_blank" class="visit__link">#visitSEDONA</a>
+        <a href="https://www.google.by/search?client=opera&q=%23visitsedona&sourceid=opera&ie=UTF-8&oe=UTF-8" target="_blank" class="visit__link" title="#visitsedona">#visitSEDONA</a>
 
         <ul class="social__list">
           <li class="social__item">
             <a href="https://twitter.com" target="_blank" class="social__link twitter">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               viewBox="0 0 17.5 14.66" style="enable-background:new 0 0 17.5 14.66;" xml:space="preserve">
               <g id="W6EeEF_1_">
               <g>
@@ -215,7 +224,7 @@
           </li>
           <li class="social__item">
             <a href="https://facebook.com" target="_blank" class="social__link facebook">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               viewBox="0 0 8.67 18.94" style="enable-background:new 0 0 8.67 18.94;" xml:space="preserve">
               <path d="M6.28,3.36c0.8,0,1.6,0,2.4,0c0-1.12,0-2.24,0-3.36C7.71,0,6.75,0,5.79,0C2.66,0.18,1.54,2.39,1.95,6.11H0v3.52h1.96
                 c0,3.1,0,6.21,0,9.31c1.28,0,2.56,0,3.84,0c0-3.1,0-6.21,0-9.31h2.86V6.11H5.79C5.77,5.07,5.75,3.71,6.28,3.36z"/>
@@ -224,7 +233,7 @@
           </li>
           <li class="social__item">
             <a href="https://youtube.com"  target="_blank" class="social__link youtube">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               viewBox="0 0 19.98 14.02" style="enable-background:new 0 0 19.98 14.02;" xml:space="preserve">
             <path d="M17.14,0H2.84C1.27,0,0,1.28,0,2.83v8.35c0,1.56,1.27,2.83,2.84,2.83h14.31c1.56,0,2.83-1.28,2.83-2.83V2.83
               C19.98,1.28,18.7,0,17.14,0z M7.04,10.39V3.62l6.77,3.38L7.04,10.39z"/>
@@ -236,7 +245,7 @@
         <div class="html-academy">
           <a href="" class="html-academy__link" target="_blank">
             <span class="html-academy__text">разработано</span>
-            <svg style="width: 27px;" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg style="width: 27px;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             viewBox="0 0 153.38 194.24" style="enable-background:new 0 0 153.38 194.24;" xml:space="preserve">
             <path class="st0" d="M77.5,0.08L76.69,0L0,8.04v140.57l76.69,45.63l76.69-45.63V8.04L77.5,0.08z M143.35,142.9l-66.66,39.66
               L10.03,142.9V85.29l66.37,39.51l0.11,7.16l-45.53-27.1l-0.07,6.95l45.71,27.47l0.11,7.35l-45.7-27.19l-0.07,6.95l45.71,27.47
