--- a/source/index.html
+++ b/source/index.html
@@ -3,8 +3,9 @@
   <head>
     <title>Седона</title>
 
+    <meta name="Description" content="Visist Sedona">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, initial-scale-1">
+    <meta name="viewport" content="width=device-width,initial-scale-1">
     <meta name="format-detection" content="telephone=no"/>
     <meta name="format-detection" content="address=no"/>
     
@@ -203,11 +204,11 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a href="https://www.google.by/search?client=opera&q=%23visitsedona&sourceid=opera&ie=UTF-8&oe=UTF-8" target="_blank" class="visit__link" title="#visitsedona">#visitSEDONA</a>
+        <a href="https://www.google.by/search?client=opera&q=%23visitsedona&sourceid=opera&ie=UTF-8&oe=UTF-8" target="_blank" rel="noopener" class="visit__link" title="#visitsedona">#visitSEDONA</a>
 
         <ul class="social__list">
           <li class="social__item">
-            <a href="https://twitter.com" target="_blank" class="social__link twitter">
+            <a href="https://twitter.com" target="_blank" rel="noopener" class="social__link social__link.twitter">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               viewBox="0 0 17.5 14.66" style="enable-background:new 0 0 17.5 14.66;" xml:space="preserve">
               <g id="W6EeEF_1_">
@@ -223,7 +224,7 @@
             </a>
           </li>
           <li class="social__item">
-            <a href="https://facebook.com" target="_blank" class="social__link facebook">
+            <a href="https://facebook.com" target="_blank" rel="noopener" class="social__link social__link.facebook">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               viewBox="0 0 8.67 18.94" style="enable-background:new 0 0 8.67 18.94;" xml:space="preserve">
               <path d="M6.28,3.36c0.8,0,1.6,0,2.4,0c0-1.12,0-2.24,0-3.36C7.71,0,6.75,0,5.79,0C2.66,0.18,1.54,2.39,1.95,6.11H0v3.52h1.96
@@ -232,7 +233,7 @@
             </a>
           </li>
           <li class="social__item">
-            <a href="https://youtube.com"  target="_blank" class="social__link youtube">
+            <a href="https://youtube.com"  target="_blank" rel="noopener" class="social__link social__link.youtube">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               viewBox="0 0 19.98 14.02" style="enable-background:new 0 0 19.98 14.02;" xml:space="preserve">
             <path d="M17.14,0H2.84C1.27,0,0,1.28,0,2.83v8.35c0,1.56,1.27,2.83,2.84,2.83h14.31c1.56,0,2.83-1.28,2.83-2.83V2.83
@@ -243,7 +244,7 @@
         </ul>
 
         <div class="html-academy">
-          <a href="" class="html-academy__link" target="_blank">
+          <a href="" class="html-academy__link" target="_blank" rel="noopener">
             <span class="html-academy__text">разработано</span>
             <svg style="width: 27px;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             viewBox="0 0 153.38 194.24" style="enable-background:new 0 0 153.38 194.24;" xml:space="preserve">
