--- a/source/index.html
+++ b/source/index.html
@@ -261,7 +261,7 @@
 
     </footer>
 
-    <script src="js/menu-mob.js"></script>
+    <script type="text/javascript" async src="js/menu-mob.js"></script>
 
   </body>
 </html>
