--- a/source/photo.html
+++ b/source/photo.html
@@ -323,7 +323,7 @@
 
     </footer>
 
-    <script src="js/menu-mob.js"></script>
+    <script type="type/javascript" defer src="js/menu-mob.js"></script>
 
   </body>
 </html>
