--- a/source/review.html
+++ b/source/review.html
@@ -176,6 +176,27 @@
         </form>
       </section>
 
+      <section class="popup-complete">
+        <div class="complete__wrapper">
+          <h3 class="complete__title">ваш отзыв отправлен</h3>
+          <p class="complete__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам.
+            В ближайшее время мы опубликуем его на сайте.</p>
+          <div class="complete__button--wrapper">
+            <button type="button" class="complete__button button">Закрыть окно</button>
+          </div>
+        </div>
+
+      </section>
+
+      <section class="popup-fail">
+        <div class="fail__wrapper">
+          <h3 class="fail__title">Что-то пошло не так!</h3>
+          <p class="fail__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+          <div class="fail__button--wrapper">
+            <button type="button" class="fail__button button">ОК</button>
+          </div>
+        </div>
+      </section>
 
     </main>
 
@@ -238,7 +259,7 @@
 
     </footer>
 
-    <script src="js/menu-mob.js"></script>
+    <script type="type/javascript" defer src="js/menu-mob.js"></script>
 
   </body>
 </html>
